# advent-of-code

./: Cargo.toml  README.md
2021/: README.md
2021/src/: day1.rs  day10.rs  day12.rs  day2.rs  day4.rs  day5.rs  day6.rs  day7.rs  day9.rs  main.rs
2022/input/: pyt.py  sample_4.txt
2022/src/: day1.rs  day10.rs  day12.rs  day2.rs  day3.rs  day4.rs  day5.rs  day6.rs  day7.rs  day8.rs  day9.rs  main.rs
2023/: Cargo.toml
2023/src/: day1.rs  day10.rs  day11.rs  day12.rs  day13.rs  day2.rs  day3.rs  day4.rs  day5.rs  day6.rs  day7.rs  day8.rs  day9.rs  main.rs
2024/: Cargo.toml
2024/src/: day1.rs  day2.rs  day3.rs  day4.rs  day5.rs  day6.rs  day7.rs  day8.rs  main.rs
src/: day1.rs  day10.rs  day11.rs  day2.rs  day3.rs  day4.rs  day6.rs  day7.rs  day8.rs  day9.rs  main.rs
