[package]
name = "advent-of-code-2024"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.13.0"
lazy_static = "1.5.0"
num-integer = "0.1.46"
rayon = "1.10.0"
regex = { version = "1.11.1", features = ["pattern"] }
took = "0.1.2"
